# accelerator

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: master.yml
includes/: config.h
src/: accelerator.cpp
